--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "microsoft-adaptivecards": "0.6.1",
     "microsoft-speech-browser-sdk": "0.0.1",
     "react": "15.6.1",
+    "react-autocomplete": "^1.7.2",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
