--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/react": "15.0.38",
+    "@types/react-autosuggest": "^9.3.3",
     "botframework-directlinejs": "0.9.11",
     "core-js": "2.4.1",
     "markdown-it": "8.3.1",
@@ -36,7 +37,7 @@
     "microsoft-speech-browser-sdk": "0.0.1",
     "react": "15.6.1",
     "react-autocomplete": "^1.7.2",
-    "react-autosuggest": "^9.3.2",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "15.6.1",
     "react-redux": "5.0.5",
     "redux": "3.7.2",
